crates/formatter/tests/snapshots/snapshots__migrations__000312_webpush_subscriptions.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table if exists webpush_subscriptions;
