crates/formatter/tests/snapshots/snapshots__migrations__000313_workspace_app_statuses.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table workspace_app_statuses;

drop type workspace_app_status_state;
