crates/formatter/tests/snapshots/snapshots__migrations__000314_prebuilds.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- workspace_latest_builds contains latest build for every workspace
create view workspace_latest_builds as
select distinct on (workspace_id)
	wb.id,
	wb.workspace_id,
	wb.template_version_id,
	wb.job_id,
	wb.template_version_preset_id,
	wb.transition,
	wb.created_at,
	pj.job_status
from workspace_builds wb inner join provisioner_jobs pj on wb.job_id = pj.id
order by wb.workspace_id, wb.build_number desc;

-- workspace_prebuilds contains all prebuilt workspaces with corresponding agent information
-- (including lifecycle_state which indicates is agent ready or not) and corresponding preset_id for prebuild
create view workspace_prebuilds as
with
	-- All workspaces owned by the "prebuilds" user.
	all_prebuilds as (
		select w.id, w.name, w.template_id, w.created_at
		from workspaces w
		where
			w.owner_id
			= 'c42fdf75-3097-471c-8c33-fb52454d81c0' -- The system user responsible for prebuilds.
	),
	-- We can't rely on the template_version_preset_id in the workspace_builds table because this value is only set on the
	-- initial workspace creation. Subsequent stop/start transitions will not have a value for template_version_preset_id,
	-- and therefore we can't rely on (say) the latest build's chosen template_version_preset_id.
	--
	-- See https://github.com/coder/internal/issues/398
	workspaces_with_latest_presets as (
		select distinct on (workspace_id) workspace_id, template_version_preset_id
		from workspace_builds
		where template_version_preset_id is not null
		order by workspace_id, build_number desc
	),
	-- workspaces_with_agents_status contains workspaces owned by the "prebuilds" user,
	-- along with the readiness status of their agents.
	-- A workspace is marked as 'ready' only if ALL of its agents are ready.
	workspaces_with_agents_status as (
		select
			w.id as workspace_id,
			BOOL_AND(
				wa.lifecycle_state = 'ready'::workspace_agent_lifecycle_state
			) as ready
		from workspaces w
			inner join workspace_latest_builds wlb on wlb.workspace_id = w.id
			inner join workspace_resources wr on wr.job_id = wlb.job_id
			inner join workspace_agents wa on wa.resource_id = wr.id
		where
			w.owner_id
			= 'c42fdf75-3097-471c-8c33-fb52454d81c0' -- The system user responsible for prebuilds.
		group by w.id
	),
	current_presets as (
		select w.id as prebuild_id, wlp.template_version_preset_id
		from workspaces w
			inner join workspaces_with_latest_presets wlp on wlp.workspace_id = w.id
		where w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'
	) -- The system user responsible for prebuilds.
select
	p.id,
	p.name,
	p.template_id,
	p.created_at,
	COALESCE(a.ready, false) as ready,
	cp.template_version_preset_id as current_preset_id
from all_prebuilds p
	left join workspaces_with_agents_status a on a.workspace_id = p.id
	inner join current_presets cp on cp.prebuild_id = p.id;

create view workspace_prebuild_builds as
select
	id,
	workspace_id,
	template_version_id,
	transition,
	job_id,
	template_version_preset_id,
	build_number
from workspace_builds
where
	initiator_id
	= 'c42fdf75-3097-471c-8c33-fb52454d81c0'; -- The system user responsible for prebuilds.
