crates/formatter/tests/snapshots/snapshots__migrations__000317_workspace_app_status_drop_fields.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table only workspace_app_statuses drop column if exists needs_user_attention,
drop column if exists icon;
